--- a/interface/styles/login.css
+++ b/interface/styles/login.css
@@ -17,7 +17,7 @@
 
 body {
     font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
-    background: #75918d; /*linear-gradient(135deg, #F0F9FF 0%, #E0F7FF 100%);*/
+    background: #d1e3e1; /*linear-gradient(135deg, #F0F9FF 0%, #E0F7FF 100%);*/
     min-height: 100vh;
     display: flex;
     align-items: center;
@@ -165,12 +165,14 @@ body {
     background: #DCFCE7;
     color: #166534;
     border: 1px solid #86EFAC;
+    display: block;
 }
 
 .status.error {
     background: #FEE2E2;
     color: #991B1B;
     border: 1px solid #FECACA;
+    display: block;
 }
 
 .loading-spinner {
